--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button onclick="abrir_cerrar_menu()" class="boton_menu" id="x">
                 <nav id="menu" class="desplegable">
                     <ul>
-                        <li><a href="Menu.html"><h1>Menu</h1></a></li>
+                        <li><a href="menu.html"><h1>Menu</h1></a></li>
                         <li><a href="ofertas.html"><h1>Ofertas</h1></a></li>
                         <li><a href="informacion.html"><h1>informacion</h1></a></li>
                         
