--- a/informacion.html
+++ b/informacion.html
@@ -25,10 +25,12 @@
             </button>
             
         </div>
+
             <script src="main.js"></script>
     </b>
 
     </header>
+    <b><center><h1>informacion</h1></center>
     <hr color="orange" size="30" noshade="2">
         <main>
             <div class="Promo">ACERCA DE NOSOTROS</div>
