--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,7 @@
     </b>
 
     </header>
+    <b><center><h1>Menu</h1></center>
         <div class="menu">
         <main>
             <img src="img/vanqute.png" alt="vanquete ig big" class="vanquete">
