--- a/ofertas.html
+++ b/ofertas.html
@@ -30,6 +30,7 @@
 
     </header>
     <hr color="orange" size="30" noshade="2">
+    <b><center><h1>Orfetas</h1></center>
         <main>
             
             <div class="Promo"><h1>PROMOCIONES</h1></div>
